# Diablo

./: README.md  exapunks_26_03_2023_63464_win_gog.torrent
install/: local_setup.sh  setup.sh
install/diablo_body/share/diablo_body/: local_setup.sh  package.bash  package.sh  package.xml  package.zsh
install/diablo_ctrl/include/diablo_ctrl/: diablo_ctrl.hpp
install/diablo_ctrl/lib/diablo_ctrl/: diablo_ctrl_node
install/diablo_ctrl/share/diablo_ctrl/: local_setup.sh  package.bash  package.sh  package.xml  package.zsh
install/diablo_teleop/lib/diablo_teleop/: teleop_node
install/diablo_teleop/share/diablo_teleop/: package.bash  package.sh  package.xml  package.zsh
install/diablo_utils/include/diablo_utils/diablo_tools/: onboard_sdk_uart_protocol.h  osdk_ddj_m15.hpp  osdk_hal.hpp  osdk_movement.hpp  osdk_telemetry.hpp  osdk_virtual_rc.hpp
install/diablo_utils/share/diablo_utils/: package.bash  package.sh  package.xml  package.zsh
install/motion_msgs/include/motion_msgs/msg/: leg_motors.hpp  motion_ctrl.hpp
install/motion_msgs/share/motion_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motion_msgs/share/motion_msgs/cmake/: motion_msgs__rosidl_generator_cExport-noconfig.cmake  motion_msgs__rosidl_generator_cppExport.cmake  motion_msgs__rosidl_typesupport_introspection_cExport.cmake  motion_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/motion_msgs/share/motion_msgs/msg/: LegMotors.idl  MotionCtrl.idl
log/: latest_build
(+13 files in other folders)
